--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
-title: Fachinformatiker Anwendungsentwicklung Prüfungsvorbereitung
+title: Fachinformatiker (AE / SI) Prüfungsvorbereitung
 description: Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!
